--- a/index.html
+++ b/index.html
@@ -166,7 +166,163 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="token-left"></div>
+                                <div class="token-left">
+                                    <div id="token-animation">
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="token-right">
+                                    <div class="token-subtitle">
+                                        Token Distribution
+                                    </div>
+                                    <div class="token-title">
+                                        TOKEN SALE STARS
+                                    </div>
+                                    <img src="" class="token-bar" alt="">
+                                    <div class="token-desc">
+                                        <div class="token-desc-content">
+                                            The ICO usually takes place before the project is complete and
+                                            helps fund the expenses undertaken by the founding team until
+                                            launch. For some of the larger projects
+                                        </div>
+                                    </div>
+                                    <div class="token-desc">
+                                        <div class="token-desc-label">
+                                            Detail
+                                        </div>
+                                        <div class="token-desc-content">
+                                            To calculate the number of tokens you will receive, you can
+                                            follow the following formula. Note that this applies to public
+                                            presale contributions only. If you participated through a syndicate
+                                            or private presale
+                                            To calculate the number of tokens you will receive, you can follow
+                                            the following formula. Note that this applies to public presale
+                                            contributions only. If you participated through a syndicate or private
+                                            presale
+                                        </div>
+                                    </div>
+                                    <div class="token-list">
+                                        <div class="token-item">
+                                            <div class="token-icon">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="token-value">
+                                                Symbol: <strong>CIC</strong>
+                                            </div>
+                                        </div>
+                                        <div class="token-item">
+                                            <div class="token-icon">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="token-value">
+                                                Initial Value: <strong>1 ETH = 3177.38 CIC</strong>
+                                            </div>
+                                        </div>
+                                        <div class="token-item">
+                                            <div class="token-icon">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="token-value">
+                                                Type: <strong>ERC20</strong>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="block block-sheet">
+                <div class="block-content">
+                    <div class="sheet-title">IMPLEMENTATION SHEET</div>
+                    <img src="" alt="" class="sheet-bar">
+                    <div class="sheet-desc">
+                        This is a list of cryptocurrencies. the number of cryptocurrencies available over
+                        the internet as of 07 January 2018 is over 1384 and growing.
+                    </div>
+
+                    <div class="sheet-roadmap">
+                        <div class="sheet-line-bg">
+                            <div class="sheet-line-main"></div>
+                        </div>
+
+                        <div class="time-item">
+                            <div class="time-date">November 2019</div>
+                            <div class="time-desc">
+                                Crypto Ico
+                                Platform idea
+                            </div>
+                        </div>
+                        <div class="time-item">
+                            <div class="time-date">January 2020</div>
+                            <div class="time-desc">
+                                Crypto Ico
+                                Platform idea
+                            </div>
+                        </div>
+                        <div class="time-item">
+                            <div class="time-date">August 2022</div>
+                            <div class="time-desc">
+                                Crypto Ico
+                                Platform idea
+                            </div>
+                        </div>
+                        <div class="time-item">
+                            <div class="time-date">November 2023</div>
+                            <div class="time-desc">
+                                Crypto Ico
+                                Platform idea
+                            </div>
+                        </div>
+
+                        <div class="tim-now">
+                            <div class="time-now-date">
+                                <div class="time-now-year">
+                                    May 2021
+                                </div>
+                                <div class="time-now-desc">
+                                    Ico Realese
+                                </div>
+                            </div>
+                            <div class="time-now-label">Live Now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="block block-faq">
+                <div class="block-content">
+                    <div class="container">
+                        <div class="faq-tab">
+                            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                                <li class="nav-item" role="presentation">
+                                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
+                                        role="tab" aria-controls="pills-home" aria-selected="true">General Questions</a>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
+                                        role="tab" aria-controls="pills-profile" aria-selected="false">ICO Questions</a>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact"
+                                        role="tab" aria-controls="pills-contact" aria-selected="false">ICO Questions</a>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact"
+                                        role="tab" aria-controls="pills-contact" aria-selected="false">Investors</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content" id="pills-tabContent">
+                                <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                                    aria-labelledby="pills-home-tab">...</div>
+                                <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                                    aria-labelledby="pills-profile-tab">...</div>
+                                <div class="tab-pane fade" id="pills-contact" role="tabpanel"
+                                    aria-labelledby="pills-contact-tab">...</div>
                             </div>
                         </div>
                     </div>
